--- a/templates/callback.html
+++ b/templates/callback.html
@@ -11,6 +11,8 @@
             <h1>Spotify Song Tracker</h1>
             <form action="/getsongs" autocomplete="on" method="POST" enctype="multipart/form-data">
                 Code:<br> <input type="text" name="code"><br><br>
+                Name:<br> <input type="text" name="name"><br><br>
+                Last Name: <br> <input typ'"text" name="last_name"><br><br>
                 Username:<br> <input type="text" name="user_name"><br><br>
                 <button type="submit">SEND CODE</button>
             </form>       
