Add "copy code from url bar" comment

--- a/templates/callback.html
+++ b/templates/callback.html
@@ -9,6 +9,7 @@
     <body>
         <center>
             <h1>Spotify Song Tracker</h1>
+            <p>Copy the code from the URL bar</p>
             <form action="/getsongs" autocomplete="on" method="POST" enctype="multipart/form-data">
                 Code:<br> <input type="text" name="code"><br><br>
                 Name:<br> <input type="text" name="name"><br><br>
