CHange background color, button and font color

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,6 @@
 body{
-    background-color: honeydew;
+    background-color: #081700;
+  
 }
 h1{
     color:rgb(96, 158, 60);
@@ -18,11 +19,17 @@ input{
     color:rgb(128, 128, 128); 
 }
 button{
-    background: rgb(9, 54, 105);
+    background: rgb(8, 183, 43);
     height: 45px; 
     width: 200px; 
     color: white; 
     size: 5; 
     font:oblique;
 
+}
+p{
+   color:rgb(96, 158, 60);
+}
+form{
+   color:rgb(96, 158, 60);
 }
