--- a/templates/authorization.html
+++ b/templates/authorization.html
@@ -2,17 +2,46 @@
 
 <html>
     <head>
-        <link rel="stylesheet" href="/static/styles.css" type="text/css"></link>
+	<meta charset="utf-8">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
+        <link rel="stylesheet" href="static/styles.css" type="text/css"></link>
         <title>Recent Played Songs</title>
+	
+	<style>
+		.bd-placeholder-img {
+			font-size: 1.125rem;
+			text-anchor: middle;
+			-webkit-user-select: none;
+			-moz-user-select: none;
+			user-select: none;
+		}
+
+		@media (min-width: 768px) {
+			.bd-placeholder-img-lg {
+			font-size: 3.5rem;
+			}
+		}
+	
+	</style>
+	<link href="static/styles.css" rel="stylesheet">
+
     </head>
-        <center>
-            <!--font color="black" size="4" style="font-family: sans-serif"-->
-            <h1>Spotify Song Tracker</h1>
-            <h2>Get insights from your most recent songs on Spotify. Start now!</h2>
-        
-            <form action="/callback" autocomplete="on" method="POST" enctype="multipart/form-data">
-                <button type="submit">AUTHORIZE</button>
-            </form>
-        </center>
+
+    <body class="d-flex h-100 text-center text-white bg-dark">
+    	<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+		<main class="px-3">
+			<h1>Welcome to Spotisights.</h1>
+        		<p class="lead">Get insights from your most recent songs on Spotify. Start now!</p>
+        		<p class="lead">
+			<form action="/callback" autocomplete="on" method="POST" enctype="multipart/form-data">
+          		<button type="submit" class="btn btn-lg btn-secondary fw-bold border-white bg-black">Start</button>
+          		</form>
+        		</p>
+      		</main>
+
+    	</div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>    
+
     </body>
 </html>
