--- a/templates/callback.html
+++ b/templates/callback.html
@@ -2,21 +2,61 @@
 
 <html>
     <head>
-        <link rel="stylesheet" href="/static/styles.css" type="text/css"></link>
-        <title>Recent Played Songs</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+        <link href="static/callback.css" rel="stylesheet">
+
+        <style>
+            .bd-placeholder-img {
+                font-size: 1.125rem;
+                text-anchor: middle;
+                -webkit-user-select: none;
+                -moz-user-select: none;
+                user-select: none;
+            }
+        
+            @media (min-width: 768px) {
+                .bd-placeholder-img-lg {
+                font-size: 3.5rem;
+                }
+            }
+        </style>
+    
+        <title>Spotisights - Login</title>
     </head>
     
-    <body>
-        <center>
-            <h1>Spotify Song Tracker</h1>
-            <p>Copy the code from the URL bar</p>
-            <form action="/getsongs" autocomplete="on" method="POST" enctype="multipart/form-data">
-                Code:<br> <input type="text" name="code"><br><br>
-                Name:<br> <input type="text" name="name"><br><br>
-                Last Name: <br> <input typ'"text" name="last_name"><br><br>
-                Username:<br> <input type="text" name="user_name"><br><br>
-                <button type="submit">SEND CODE</button>
-            </form>       
-        </center>
+    <body class="d-flex h-100 text-center text-white bg-dark">
+    
+        <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+            <main class="px-3">
+                <center>
+                    <h1>Spotify Song Tracker</h1>
+                    <p>Copy the code from the URL bar</p>
+
+                    <form action="/getsongs" autocomplete="on" method="POST" enctype="multipart/form-data">
+
+                    <div class="mb-3">
+                        <label for="exampleFormControlInput1" class="form-label">Code</label>
+                        <input type="text" class="form-control" id="exampleFormControlInput1" name="code"> 
+                        <br>
+                        <label for="exampleFormControlInput2" class="form-label">Name</label>
+                        <input type="text" class="form-control" id="exampleFormControlInput2" name="name">
+                        <br>
+                        <label for="exampleFormControlInput3" class="form-label">Last Name</label>
+                        <input type="text" class="form-control" id="exampleFormControlInput3" name="last_name">
+                        <br>
+                        <label for="exampleFormControlInput4" class="form-label">Username</label>
+                        <input type="text" class="form-control" id="exampleFormControlInput4" name="user_name">
+                        <br>
+                        <button type="submit" class="btn btn-lg btn-secondary fw-bold border-white bg-black">SEND CODE</button>
+
+                    </div>
+                    </form>
+        
+                </center>
+
+            </main>    
+
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>    
     </body>
 </html>
