--- a/static/styles.css
+++ b/static/styles.css
@@ -1,35 +1,54 @@
-body{
-    background-color: #081700;
-  
-}
-h1{
-    color:rgb(96, 158, 60);
-    size:"4"; 
-    font-family:"Noto Sans JP";
+/*
+ * Globals
+ */
+
+
+/* Custom default button */
+.btn-secondary,
+.btn-secondary:hover,
+.btn-secondary:focus {
+  color: #333;
+  text-shadow: none; /* Prevent inheritance from `body` */
 }
 
-h2{
-    color:rgb(96, 158, 60);
-    size:"4"; 
-    font-family:"Noto Sans JP";
-}
-input{
-    height:25px;
-    font-size:14pt;
-    color:rgb(128, 128, 128); 
-}
-button{
-    background: rgb(8, 183, 43);
-    height: 45px; 
-    width: 200px; 
-    color: white; 
-    size: 5; 
-    font:oblique;
 
+/*
+ * Base structure
+ */
+
+body {
+  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
-p{
-   color:rgb(96, 158, 60);
+
+.cover-container {
+  max-width: 42em;
 }
-form{
-   color:rgb(96, 158, 60);
+
+
+/*
+ * Header
+ */
+
+.nav-masthead .nav-link {
+  padding: .25rem 0;
+  font-weight: 700;
+  color: rgba(238, 102, 12, 0.281)
+  background-color: transparent;
+  border-bottom: .25rem solid transparent;
 }
+
+.nav-masthead .nav-link:hover,
+.nav-masthead .nav-link:focus {
+  border-bottom-color: rgba(255, 255, 255, .25);
+}
+
+.nav-masthead .nav-link + .nav-link {
+  margin-left: 1rem;
+}
+
+.nav-masthead .active {
+  color: #fff;
+  border-bottom-color: #fff;
+}
+
